[package]
name = "personal_bills_tracker"
version = "0.1.0"
authors = ["= <=>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"
lopdf="0.33.0"
rfd="0.14.1"
pdf-extract = "0.7.7"
tempfile = "3.11.0"
polodb_core = "4.4.2"
regex = "1.10.6"

[build-dependencies]
slint-build = "1.6"
